RESOLVED FIXED5399
no-repeat on negatively positioned background images are ignored
https://bugs.webkit.org/show_bug.cgi?id=5399
Summary no-repeat on negatively positioned background images are ignored
Elliott Sprehn
Reported 2005-10-16 22:25:23 PDT
Elements with a negatively positioned background image ignore a "no-repeat" rule when the element is the same size or smaller than the background image. If either the height and width of the element are greater than the size of the background image it behaves as expected. In the link provided neither box should have a visible background image, however Safari renders the background image in the top box as though the no-repeat rule was not present. Reproducible with both Konqueror and Safari, official (412.5) and latest nightly (2005-10-16 09:27:50) builds.
Attachments
Test case (2.79 KB, text/html)
2007-01-10 22:26 PST, Mark Rowe (bdash)
no flags
Expanded test case (4.90 KB, text/html)
2007-01-11 01:02 PST, Mark Rowe (bdash)
no flags
jonathanjohnsson
Comment 1 2006-05-11 11:46:39 PDT
*** Bug 7697 has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 2 2007-01-10 22:26:08 PST
Created attachment 12355 [details] Test case This test case is a bit clearer than the URL linked above. The top image shows the full image, the bottom image shows the same image as a background image offset by -125px with no-repeat set.
Mark Rowe (bdash)
Comment 3 2007-01-11 01:02:08 PST
Created attachment 12357 [details] Expanded test case
Emrah BASKAYA
Comment 4 2007-01-20 15:54:34 PST
I think my site also suffers from this, check out the star bullets next to tutorials on www.hesido.com, was going to report but search revealed this entry. Just to let developers know this is not a really obscure technique. Page shows correctly on other major browsers.
mitz
Comment 5 2007-02-01 14:59:03 PST
The patch for bug 11720 (attachment 12861 [details]) addresses this bug as well.
Mark Rowe (bdash)
Comment 6 2007-02-07 21:07:20 PST
Fixed with fix for bug 11720 in r19490.
John Lascurettes
Comment 7 2007-02-07 21:50:04 PST
Is this fixed? In the latest nightly downloaded 7 Feb 2007 the test case http://bugs.webkit.org/attachment.cgi?id=12355&action=view still shows it broken. So does the test case at http://bugs.webkit.org/attachment.cgi?id=10693 from bug 3998
Mark Rowe (bdash)
Comment 8 2007-02-07 21:53:48 PST
The fix was landed less than an hour ago. The latest nightly build is older than that which means it doesn't contain the fix. Please check again with the next nightly build which should be available within the next half hour.
John Lascurettes
Comment 9 2007-02-07 23:10:05 PST
(In reply to comment #8) > Please check again with the > next nightly build which should be available within the next half hour. > Indeed, fixed.
Note You need to log in before you can comment on or make changes to this bug.