2007-02-07  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=5399
          no-repeat on negatively positioned background images are ignored

        Test: fast/backgrounds/repeat/negative-offset-repeat.html

        - fix http://bugs.webkit.org/show_bug.cgi?id=5821
          Changing background of <col> doesn't repaint the column

        Test: fast/repaint/table-col-background.html

        - fix http://bugs.webkit.org/show_bug.cgi?id=11720
          REGRESSION: large amounts of CPU consumed viewing this site

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::imageChanged): Added. Finds the border and/or background
        layer(s) that use the image and invalidates only the rect in which the image
        actually paints. There are two special cases in this function: 1) for the body
        element, the background is propagated to the root; 2) inline flows do a full
        repaint.
        (WebCore::RenderBox::calculateBackgroundImageGeometry): Added. Factored out,
        simplified and corrected the calculation of the rectangle into which the background
        image paints, the tile size and the pattern phase.
        (WebCore::RenderBox::paintBackgroundExtended):
        * rendering/RenderBox.h:
        * rendering/RenderObject.cpp:
        * rendering/RenderObject.h:
        (WebCore::RenderObject::imageChanged): Moved the implementation to RenderBox.
        * rendering/RenderTableCol.cpp:
        (WebCore::RenderTableCol::getAbsoluteRepaintRect): Overridden to return the
        table's repaint rect.
        (WebCore::RenderTableCol::imageChanged): Overridden to do a full repaint, which
        currently repaints the entire table.
        * rendering/RenderTableCol.h:
        * rendering/RenderTableRow.cpp:
        (WebCore::RenderTableRow::imageChanged): Overridden to do a full repaint
        of the row, since the backgrounds are painted by the cells.
        * rendering/RenderTableRow.h:
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::imageChanged): Overridden to do a full
        repaint of the section, since the backgrounds are painted by the cells.
        * rendering/RenderTableSection.h:

2007-02-07  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - pixel test and updated results for http://bugs.webkit.org/show_bug.cgi?id=5399
          no-repeat on negatively positioned background images are ignored

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=5821
          Changing background of <col> doesn't repaint the column

        * fast/backgrounds/repeat/negative-offset-repeat-expected.checksum: Added.
        * fast/backgrounds/repeat/negative-offset-repeat-expected.png: Added.
        * fast/backgrounds/repeat/negative-offset-repeat-expected.txt: Added.
        * fast/backgrounds/repeat/negative-offset-repeat.html: Added. Based on a test by Mark Rowe.
        * fast/backgrounds/repeat/resources/gradient.gif: Added.
        * fast/repaint/table-col-background-expected.checksum: Added.
        * fast/repaint/table-col-background-expected.png: Added.
        * fast/repaint/table-col-background-expected.txt: Added.
        * fast/repaint/table-col-background.html: Added.
        * tables/mozilla/marvin/backgr_position-table-expected.checksum:
        * tables/mozilla/marvin/backgr_position-table-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-cell-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-cell-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-column-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-column-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-column-group-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-column-group-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-row-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-row-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-row-group-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_border-table-row-group-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_layers-hide-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_layers-hide-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-cell-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-cell-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-column-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-column-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-column-group-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-column-group-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-row-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-row-expected.png:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-row-group-expected.checksum:
        * tables/mozilla_expected_failures/marvin/backgr_position-table-row-group-expected.png:


Canonical link: https://commits.webkit.org/16384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19490 268f45cc-cd09-0410-ab3c-d52691b4dbfc