WebCore/rendering/RenderBox.h
@@ -148,6 +148,7 @@ public:
     virtual IntRect getClipRect(int tx, int ty);
 
     virtual void paintBoxDecorations(PaintInfo&, int tx, int ty);
+    virtual void imageChanged(CachedImage*);
 
 protected:
     void paintBackground(GraphicsContext*, const Color&, const BackgroundLayer*, int clipY, int clipHeight, int tx, int ty, int width, int height);
@@ -160,6 +161,7 @@ protected:
 private:
     void paintRootBoxDecorations(PaintInfo&, int tx, int ty);
 
+    void calculateBackgroundImageGeometry(const BackgroundLayer*, int tx, int ty, int w, int h, IntRect& destRect, IntPoint& phase, IntSize& tileSize);
     void paintBackgrounds(GraphicsContext*, const Color&, const BackgroundLayer*, int clipY, int clipHeight, int tx, int ty, int width, int height);
 
     int containingBlockWidthForPositioned(const RenderObject* containingBlock) const;
