WebCore/rendering/RenderObject.cpp
@@ -2932,23 +2932,6 @@ UChar RenderObject::backslashAsCurrencySymbol() const
     return '\\';
 }
 
-void RenderObject::imageChanged(CachedImage* image)
-{
-    // Repaint when the background image or border image finishes loading.
-    // This is needed for RenderBox objects, and also for table objects that hold
-    // backgrounds that are then respected by the table cells (which are RenderBox
-    // subclasses). It would be even better to find a more elegant way of doing this that
-    // would avoid putting this function and the CachedResourceClient base class into RenderObject.
-    if (image && image->canRender() && parent()) {
-        if (view() && element() && (element()->hasTagName(htmlTag) || element()->hasTagName(bodyTag)))
-            // repaint the entire canvas since the background gets propagated up
-            view()->repaint();
-        else
-            // repaint object, which is a box or a container with boxes inside it
-            repaint();
-    }
-}
-
 bool RenderObject::willRenderImage(CachedImage*)
 {
     // Without visibility we won't render (and therefore don't care about animation).
