WebCore/rendering/RenderObject.h
@@ -869,7 +869,7 @@ public:
     virtual int previousOffset(int current) const;
     virtual int nextOffset(int current) const;
 
-    virtual void imageChanged(CachedImage*);
+    virtual void imageChanged(CachedImage*) { }
     virtual bool willRenderImage(CachedImage*);
 
     virtual void selectionStartEnd(int& spos, int& epos) const;
