WebCore/rendering/RenderTableCol.h
@@ -43,6 +43,9 @@ public:
     virtual bool canHaveChildren() const;
     virtual bool requiresLayer() { return false; }
 
+    virtual IntRect getAbsoluteRepaintRect();
+    virtual void imageChanged(CachedImage*);
+
 #ifndef NDEBUG
     virtual void dump(TextStream*, DeprecatedString) const;
 #endif
