WebCore/rendering/RenderTableSection.h
@@ -99,6 +99,7 @@ public:
     int outerBorderRight() const { return m_outerBorderRight; }
 
     virtual void paint(PaintInfo&, int tx, int ty);
+    virtual void imageChanged(CachedImage*);
 
     int numRows() const { return m_gridRows; }
     int numColumns() const;
